# Chat_Agents

./: .gitignore  README.md  docker-compose.yml  env.template  main.py  pyproject.toml  start.sh
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/agents/: agentic_rag_service.py  researcher_service.py
backend/app/agents/agentic_rag/: __init__.py  ingestion.py
backend/app/agents/agentic_rag/graph/: __init__.py  consts.py  graph.py  state.py
backend/app/agents/agentic_rag/graph/chains/: __init__.py  answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
backend/app/agents/agentic_rag/graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
backend/app/agents/researcher/: __init__.py  graph.py  main.py  prompts.py  state.py
backend/app/agents/researcher/nodes/: __init__.py  planner.py  publisher.py  researcher.py  task.py
backend/app/models/: schemas.py
backend/app/utils/: file_utils.py
frontend/: Dockerfile  app.py
src/agents/agentic_rag/: chains.py  graph.py  ingestion.py  ingestion_simple.py  main.py  main_simple.py  nodes.py  state.py
src/agents/researcher/: README.md  __init__.py  graph.py  main.py  prompts.py  state.py
src/agents/researcher/nodes/: planner.py  publisher.py  researcher.py  task.py
