[project]
name = "chat-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langchain-tavily>=0.2.2",
    "langchainhub>=0.1.21",
    "langgraph>=0.4.8",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.7.6",
]
